Prevent username from wrapping on Safari

--- a/client/src/components/nav/nav.styles.scss
+++ b/client/src/components/nav/nav.styles.scss
@@ -21,6 +21,7 @@
         .nav-username {
             color: white;
             margin-right: 6rem;
+            white-space: nowrap;
         }
 
         .nav-item {
